Refactor 2022 FRQ Study document structure and enhance Problem 2 with Textbook class details

--- a/AP_Test_Study/FRQ's/2022.md
+++ b/AP_Test_Study/FRQ's/2022.md
@@ -1,6 +1,8 @@
 # 2022 FRQ Study
 
-# Notes
+## Problem 1
+
+### Notes
 
 3 Level's 
 
@@ -32,6 +34,8 @@ Rules for scoring:
 
 - If the game is a bonus game, the score for the game is tripled
 
+### A
+
 ```java
 public int getScore(){
 
@@ -58,11 +62,146 @@ public int getScore(){
 }
 ```
 
+### B
+
+playManyTimes(int numberoftimes)
+
 ```java
+public int playManyTimes(int num){
+    int highest = 0;
 
+    for (int x = 0; x < num; x++){
+        play(); //my old solution was wrong learn more about this
+        if (iteration.getPoints() > highest){
+            highest == iteration.getPoints();
+        }
+    }
 
-
-
-
+    return hightest;
+}
 ```
 
+## Problem 2 
+
+### Notes
+
+The `Book` class is used to store information about a book
+
+variables
+title
+price
+
+Methods
+
+book(bookTitle, bookPrice)
+
+getTitle()
+
+getBookInfo()
+
+return title + "-" + price;
+
+Create a class Textbook subclass Book
+
+has edition number
+
+getBookInfo also returns edition information
+
+```java
+public class Textbook extends Book{
+
+    private String edition;
+
+    public Textbook(String bookTitle, double bookPrice, int bookEdition) {
+        super(bookTitle, bookPrice); //this will run book(bookTitle, bookPrice)
+        private String edition = bookEdition;
+    }
+
+    //Forgot to add getEdition()
+    public int getEdition(){
+        return edition;
+    }
+
+    // Need to add more title
+    public boolean canSubstituteFor(Textbook check){
+        if (check.getTitle().equals(getTitle())){
+            if (check.getEdition() >= edition){
+                return true;
+            }
+        }
+        else{
+            return false;
+        }
+    }
+
+    public String getBookInfo(){
+        return title + "-" + price + "-" + edition;
+    }
+}
+```
+
+
+## Problem 3 (DID NOT COMPLETE)
+
+ReviewAnalysis contains methods used to analyze the reviews and provided by users.
+
+```java
+public double getAverageRating(){ 
+    int sum = 0; 
+    for (Review r : allReviews){ 
+        sum += r.getRating();
+    } 
+    return (double) sum / allReviews.length;
+} 
+```
+
+```java
+public ArrayList<String> collectComments(){ 
+    ArrayList<String> commentList = new ArrayList<String>(); 
+    for (int i = 0; i < allReviews.length; i++){ 
+        String comment = allReviews[i].getComment();
+        if (comment.indexOf("!") >= 0){ 
+        String last = comment.substring(comment.length() – 1);
+        if (!last.equals("!") && !last.equals(".")){ 
+            comment += ".";
+        }
+        commentList.add(i + "-" + comment);
+        }
+    }
+    return commentList;
+} 
+```
+
+## Problem 4
+
+```java
+public void repopulate(){ 
+    for (int row = 0; row < grid.length; row++){ 
+        for (int col = 0; col < grid[0].length; col++){ 
+            int rval = (int)(Math.random() * MAX) + 1;
+            while (rval % 10 != 0 || rval % 100 == 0){ 
+                rval = (int)(Math.random() * MAX) + 1;
+            }
+            grid[row][col] = rval;
+        }
+    }
+} 
+``` 
+ 
+```java 
+public int countIncreasingCols(){ 
+    int count = 0; 
+    for (int col = 0; col < grid[0].length; col++){ 
+        boolean ordered = true; 
+        for (int row = 1; row < grid.length; row++){ 
+            if (grid[row][col] < grid[row-1][col]){ 
+                ordered = false;
+            }
+        } 
+        if (ordered){ 
+            count++;
+        }   
+    } 
+    return count; 
+}
+```
