Implement code changes to enhance functionality and improve performance

--- a/AP_Test_Study/FRQ's/2022.md
+++ b/AP_Test_Study/FRQ's/2022.md
@@ -140,6 +140,25 @@ public class Textbook extends Book{
 }
 ```
 
+## Problem 3 (my solution)
+
+Users can write a review if no review is written a 0 length string will be returned
+
+This is done with the Review class method
+
+Write one method two getAverageRating.
+
+```java
+public double getAverageRating(){
+    double sum = 0;
+
+    for(Review r : allReviews){
+        sum += r.getRating()
+    }
+
+    return sum / allReviews.length();
+}
+```
 
 ## Problem 3 (DID NOT COMPLETE)
 
@@ -153,6 +172,29 @@ public double getAverageRating(){
     } 
     return (double) sum / allReviews.length;
 } 
+```
+
+## Problem 3 B
+
+return an array list 
+
+**NEEDED HELP REVIEW FURTHER**
+
+```java
+public ArrayList<string> collectComments(){
+    ArrayList<string> exclamation = new ArrayList<string>;
+
+    for(int x = 0; x < allReviews.size(); x++) 
+        String comment = allReviews[x].getComment();
+        if (comment.indexOf("!") != -1){ //This checks if it can be used
+            String last = comment.substring(comment.length() - 1)
+            if (!last.equal("!") && !last.equals("."))
+                comment += ".";
+        }
+        exclamation.add(x + "-"+ comment);
+    }
+    return exclamation;
+}
 ```
 
 ```java
