Add Q3 word manipulation methods and update Final Review plan

--- a/AP_Test_Study/FRQ's/2024/2024.md
+++ b/AP_Test_Study/FRQ's/2024/2024.md
@@ -97,3 +97,42 @@ public class Scoreboard{
 }
 ```
 
+# Q3
+
+manipulation and analysis of a list of words. 
+
+determines whether each element of wordList (except 
+the first) contains the previous element as a substring
+
+```java
+public boolean isWordChain(){
+    String Previous = wordList.get(0);
+    
+    for(int x = 1; x < wordList.size(); x++){
+        word = wordList.get(i);
+        if(word.indexOf(Previous) == -1){
+            return false;
+        }
+        else{
+            Previous == word
+        }
+    }
+    return true;
+}
+```
+
+```java
+public ArrayList<String> createList(String target){
+    ArrayList<String> List = new ArrayList<>();
+
+    for(int x = 0; x < wordList.size(); x++){
+        word = wordList.get(i)
+        if(word.indexOf(target) == 0){
+            List.add(word)
+        }
+    }
+    return List;
+}
+```
+
+2D Arrays
