--- a/AP_Test_Study/FRQ's/2024/2024.md
+++ b/AP_Test_Study/FRQ's/2024/2024.md
@@ -136,3 +136,49 @@ public ArrayList<String> createList(String target){
 ```
 
 2D Arrays
+
+
+
+```java
+public Location getNextLoc(int row, int col){
+    int maxRow = grid.length;
+    int maxCol = grid[0].length;
+
+    if(maxRow == row - 1){ // Remember the -1
+        Location out = new Location(row, col + 1);
+        return out;
+    }
+
+    if(maxCol == col){ // Remember the -1
+        Location out = new Location(row + 1, col);
+        return out;
+    }
+
+    int right = gird[col][row + 1];
+    int bottom = grid[col + 1][row];
+
+    if( right > bottom){
+        Location out = new Location(row + 1, col);
+        return out;
+    }
+    else {
+        Location out = new Location(row, col + 1);
+        return out;
+    }
+}
+```
+
+```java
+public int sumPath(int row, int col){
+    int sum = 0;
+
+    while(row < grid.length - 1 || col < grid[0].length - 1){
+        sum += grid[row][col];
+
+        Location loc = getNextLoc(row, col);
+        row = loc.getRow();
+        col = loc.getCol();
+    }
+    return sum + grid[row][col];
+}
+```
